--- a/index.html
+++ b/index.html
@@ -132,8 +132,20 @@
               <i class="material-icons">search</i>
               <input type="search" placeholder="جست و جو در بازار" />
             </form>
-
-            <i class="material-icons">person</i>
+            <div class="" style="width: 50px; text-align: center; margin-top: 8px;">
+              <svg
+                width="16"
+                height="16"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                class=""
+              >
+                <path
+                  d="M8 8c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v1c0 .55.45 1 1 1h14c.55 0 1-.45 1-1v-1c0-2.66-5.33-4-8-4z"
+                  fill="#9da0af"
+                ></path>
+              </svg>
+            </div>
           </div>
 
           <div class="bottom-input">
