--- a/index.html
+++ b/index.html
@@ -132,7 +132,10 @@
               <i class="material-icons">search</i>
               <input type="search" placeholder="جست و جو در بازار" />
             </form>
-            <div class="" style="width: 50px; text-align: center; margin-top: 8px;">
+            <div
+              class=""
+              style="width: 50px; text-align: center; margin-top: 8px"
+            >
               <svg
                 width="16"
                 height="16"
@@ -175,6 +178,20 @@
     </div>
 
     <main>
+      nomral<br />
+      <input /><br />
+      tel<br />
+      <input type="tel" /><br />
+      number<br />
+      <input type="number" /><br />
+      number with extra settings<br />
+      <input
+        type="number"
+        min="0"
+        inputmode="numeric"
+        pattern="[0-9]*"
+        title="Non-negative integral number"
+      /><br />
       <section class="sec-1">
         <h2>برنامه ها</h2>
       </section>
